// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PositionsTimeline > renders only first 3 by default 1`] = `
<DocumentFragment>
  <ol
    class="ant-steps ant-steps-vertical ant-steps-title-horizontal ant-steps-outlined ant-steps-dot ant-timeline css-dev-only-do-not-override-oc1rc0 css-var-root css-dev-only-do-not-override-oc1rc0 css-var-root"
    style="--ant-cmp-steps-items-offset: 0;"
  >
    <li
      class="ant-steps-item ant-steps-item-finish ant-steps-item-empty-header ant-timeline-item-placement-start ant-timeline-item"
    >
      <div
        class="ant-steps-item-wrapper ant-timeline-item-wrapper"
      >
        <div
          class="ant-steps-item-icon ant-wave-target ant-timeline-item-icon"
        />
        <div
          class="ant-steps-item-section ant-timeline-item-section"
        >
          <div
            class="ant-steps-item-header ant-timeline-item-header"
          >
            <div
              class="ant-steps-item-rail ant-steps-item-rail-finish ant-timeline-item-rail"
            />
          </div>
          <div
            class="ant-steps-item-content ant-timeline-item-content"
          >
            <div />
            <div>
              <span>
                Inst 1
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-steps-item ant-steps-item-finish ant-steps-item-empty-header ant-timeline-item-placement-start ant-timeline-item"
    >
      <div
        class="ant-steps-item-wrapper ant-timeline-item-wrapper"
      >
        <div
          class="ant-steps-item-icon ant-wave-target ant-timeline-item-icon"
        />
        <div
          class="ant-steps-item-section ant-timeline-item-section"
        >
          <div
            class="ant-steps-item-header ant-timeline-item-header"
          >
            <div
              class="ant-steps-item-rail ant-steps-item-rail-finish ant-timeline-item-rail"
            />
          </div>
          <div
            class="ant-steps-item-content ant-timeline-item-content"
          >
            <div />
            <div>
              <span>
                Inst 2
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-steps-item ant-steps-item-finish ant-steps-item-active ant-steps-item-empty-header ant-timeline-item-placement-start ant-timeline-item"
    >
      <div
        class="ant-steps-item-wrapper ant-timeline-item-wrapper"
      >
        <div
          class="ant-steps-item-icon ant-wave-target ant-timeline-item-icon"
        />
        <div
          class="ant-steps-item-section ant-timeline-item-section"
        >
          <div
            class="ant-steps-item-header ant-timeline-item-header"
          />
          <div
            class="ant-steps-item-content ant-timeline-item-content"
          >
            <div />
            <div>
              <span>
                Inst 3
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ol>
  <button
    class="__SecondaryButton__"
    type="button"
  >
    Show all positions (6)
  </button>
</DocumentFragment>
`;

exports[`PositionsTimeline > renders with positions 1`] = `
<DocumentFragment>
  <ol
    class="ant-steps ant-steps-vertical ant-steps-title-horizontal ant-steps-outlined ant-steps-dot ant-timeline css-dev-only-do-not-override-oc1rc0 css-var-root css-dev-only-do-not-override-oc1rc0 css-var-root"
    style="--ant-cmp-steps-items-offset: 0;"
  >
    <li
      class="ant-steps-item ant-steps-item-finish ant-steps-item-empty-header ant-timeline-item-placement-start ant-timeline-item"
    >
      <div
        class="ant-steps-item-wrapper ant-timeline-item-wrapper"
      >
        <div
          class="ant-steps-item-icon ant-wave-target ant-timeline-item-icon"
        />
        <div
          class="ant-steps-item-section ant-timeline-item-section"
        >
          <div
            class="ant-steps-item-header ant-timeline-item-header"
          >
            <div
              class="ant-steps-item-rail ant-steps-item-rail-finish ant-timeline-item-rail"
            />
          </div>
          <div
            class="ant-steps-item-content ant-timeline-item-content"
          >
            <div>
              1990-1994
            </div>
            <div>
              <strong>
                UNDERGRADUATE, 
              </strong>
              <span>
                Inst 1
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-steps-item ant-steps-item-finish ant-steps-item-empty-header ant-timeline-item-placement-start ant-timeline-item"
    >
      <div
        class="ant-steps-item-wrapper ant-timeline-item-wrapper"
      >
        <div
          class="ant-steps-item-icon ant-wave-target ant-timeline-item-icon"
        />
        <div
          class="ant-steps-item-section ant-timeline-item-section"
        >
          <div
            class="ant-steps-item-header ant-timeline-item-header"
          >
            <div
              class="ant-steps-item-rail ant-steps-item-rail-finish ant-timeline-item-rail"
            />
          </div>
          <div
            class="ant-steps-item-content ant-timeline-item-content"
          >
            <div>
              1994-2000
            </div>
            <div>
              <strong>
                PHD, 
              </strong>
              <span>
                Inst 2
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="ant-steps-item ant-steps-item-finish ant-steps-item-active ant-steps-item-empty-header ant-timeline-item-placement-start ant-timeline-item"
    >
      <div
        class="ant-steps-item-wrapper ant-timeline-item-wrapper"
      >
        <div
          class="ant-steps-item-icon ant-wave-target ant-timeline-item-icon"
        />
        <div
          class="ant-steps-item-section ant-timeline-item-section"
        >
          <div
            class="ant-steps-item-header ant-timeline-item-header"
          />
          <div
            class="ant-steps-item-content ant-timeline-item-content"
          >
            <div>
              2000-present
            </div>
            <div>
              <strong>
                STAFF, 
              </strong>
              <span>
                CERN
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`PositionsTimeline > renders with single position 1`] = `
<DocumentFragment>
  <ol
    class="ant-steps ant-steps-vertical ant-steps-title-horizontal ant-steps-outlined ant-steps-dot ant-timeline css-dev-only-do-not-override-oc1rc0 css-var-root css-dev-only-do-not-override-oc1rc0 css-var-root"
    style="--ant-cmp-steps-items-offset: 0;"
  >
    <li
      class="ant-steps-item ant-steps-item-finish ant-steps-item-active ant-steps-item-empty-header ant-timeline-item-placement-start ant-timeline-item"
    >
      <div
        class="ant-steps-item-wrapper ant-timeline-item-wrapper"
      >
        <div
          class="ant-steps-item-icon ant-wave-target ant-timeline-item-icon"
        />
        <div
          class="ant-steps-item-section ant-timeline-item-section"
        >
          <div
            class="ant-steps-item-header ant-timeline-item-header"
          />
          <div
            class="ant-steps-item-content ant-timeline-item-content"
          >
            <div>
              present
            </div>
            <div>
              <strong>
                UNDERGRADUATE, 
              </strong>
              <span>
                Inst 1
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;
